--- a/package.json
+++ b/package.json
@@ -13,15 +13,20 @@
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
     "vue-carousel": "^0.18.0",
-    "vue-router": "^3.3.4"
+    "vue-router": "^3.3.4",
+    "vuetify": "^2.3.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
     "@vue/cli-plugin-eslint": "~4.3.0",
     "@vue/cli-service": "~4.3.0",
     "babel-eslint": "^10.1.0",
+    "deepmerge": "^4.2.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "fibers": "^5.0.0",
+    "sass": "^1.26.8",
+    "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
