--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -25,7 +25,16 @@ jobs:
     # Runs a single command using the runners shell
     - name: Run a one-line script
       run: echo Hello, world!
-        
+    
+    - name: executing remote ssh commands using password
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.5BOON_HOST }}
+        username: ${{ secrets.5BOON_USERNAME }}
+        password: ${{ secrets.5BOON_PASSWORD }}
+        # port: ${{ secrets.PORT }} # default : 22
+        script: whoami
+
     - name: Slack Notification
       uses: homoluctus/slatify@master
       if: always()
