--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -7,8 +7,8 @@ name: WEB
 on:
   push:
     branches: [ master, develop ]
-  pull_request:
-    branches: [ master, develop ]
+#   pull_request:
+#     branches: [ master, develop ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -25,7 +25,16 @@ jobs:
     # Runs a single command using the runners shell
     - name: Run a one-line script
       run: echo Hello, world!
-        
+    
+    - name: executing remote ssh commands using password
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.OBOON_HOST }}
+        username: ${{ secrets.OBOON_USERNAME }}
+        password: ${{ secrets.OBOON_PASSWORD }}
+        # port: ${{ secrets.PORT }} # default : 22
+        script: cd ${{ secrets.OBOON_WEB_PATH }} && git pull
+
     - name: Slack Notification
       uses: homoluctus/slatify@master
       if: always()
