[workflows] add npm run build

--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -33,7 +33,9 @@ jobs:
         username: ${{ secrets.OBOON_USERNAME }}
         password: ${{ secrets.OBOON_PASSWORD }}
         # port: ${{ secrets.PORT }} # default : 22
-        script: cd ${{ secrets.OBOON_WEB_PATH }} && git pull
+        script: 
+          cd ${{ secrets.OBOON_WEB_PATH }} && git pull
+          cd ${{ secrets.OBOON_WEB_PATH }} && npm run build
 
     - name: Slack Notification
       uses: homoluctus/slatify@master
