--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -7,8 +7,8 @@ name: WEB
 on:
   push:
     branches: [ master, develop ]
-#   pull_request:
-#     branches: [ master, develop ]
+  pull_request:
+    branches: [ master, develop ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
