--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -35,7 +35,7 @@ jobs:
         # port: ${{ secrets.PORT }} # default : 22
         script: |
           cd ${{ secrets.OBOON_WEB_PATH }} && git pull
-          cd ${{ secrets.OBOON_WEB_PATH }} && npm run build
+          npm run build
 
     - name: Slack Notification
       uses: homoluctus/slatify@master
