--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -22,11 +22,9 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
-    # Runs a single command using the runners shell
-    - name: Run a one-line script
-      run: echo Hello, world!
-    
+    # Runs ssh deploy
     - name: executing remote ssh commands using password
+      if: github.event_name == 'pull_request' && github.event.pull_request.merged == true
       uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.OBOON_HOST }}
