--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -6,9 +6,9 @@ name: WEB
 # events but only for the master branch
 on:
   push:
-    branches: [ master ]
+    branches: [ master, develop ]
   pull_request:
-    branches: [ master ]
+    branches: [ master, develop ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -21,6 +21,10 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
+      
+    # Runs a single command using the runners shell
+    - name: Run test
+      run: echo github.event_name && github.event.pull_request.merged 
 
     # Runs ssh deploy for CI, CD
     - name: executing remote ssh commands using password
@@ -36,13 +40,13 @@ jobs:
           npm run build
 
     # Slack notification for history
-    - name: Slack Notification
-      uses: homoluctus/slatify@master
-      if: always()
-      with:
-        type: ${{ job.status }}
-        job_name: '*Github Actions*'
-        mention: 'here'
-        mention_if: 'failure'
-        channel: '#logs'
-        url: ${{ secrets.SLACK_WEBHOOK }}
+#     - name: Slack Notification
+#       uses: homoluctus/slatify@master
+#       if: always()
+#       with:
+#         type: ${{ job.status }}
+#         job_name: '*Github Actions*'
+#         mention: 'here'
+#         mention_if: 'failure'
+#         channel: '#logs'
+#         url: ${{ secrets.SLACK_WEBHOOK }}
