[workflows] add npm install
must install cmd because of dependancy lib

--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -38,6 +38,7 @@ jobs:
         # port: ${{ secrets.PORT }} # default : 22
         script: |
           cd ${{ secrets.OBOON_WEB_PATH }} && git pull
+          npm install
           npm run build
 
     # Slack notification for history
