--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -8,6 +8,7 @@ on:
   push:
     branches: [ master, develop ]
   pull_request:
+    types: [closed]
     branches: [ master, develop ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
@@ -29,7 +30,7 @@ jobs:
 
     # Runs ssh deploy for CI, CD
     - name: executing remote ssh commands using password
-      if: github.event_name == 'pull_request'
+      if: github.event_name == 'pull_request' && github.event.pull_request.merged == true
       uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.OBOON_HOST }}
