--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -6,10 +6,10 @@ name: WEB
 # events but only for the master branch
 on:
   push:
-    branches: [ master, develop ]
+    branches: [ master ]
   pull_request:
     types: [closed]
-    branches: [ master, develop ]
+    branches: [ master ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
